--- a/b/ba/bam/bamkapow.com.html
+++ b/b/ba/bam/bamkapow.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the bamkapow.com privacy policy that was archived on 2007-05-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070512194920id_/http%3A//www.bamkapow.com/page.phtml%3Fp%3DPrivacy%2BPolicy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the bamkapow.com privacy policy that was archived on 2007-12-31.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071231092551id_/http%3A//www.bamkapow.com/page.phtml%3Fp%3DPrivacy%2BPolicy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en" dir="ltr"><head>
 	<title>Privacy Policy - Bam! Kapow!</title>
@@ -48,7 +48,7 @@
       document.write ("&amp;referer=" + escape(document.referrer));
    document.write ("'><" + "/script>");
 //-->
-</script><script language="JavaScript" type="text/javascript" src="http://www.doubleviking.com/adserver/adjs.php?n=407549083&amp;what=zone:17&amp;exclude=,"></script><noscript><a href='http://www.doubleviking.com/adserver/adclick.php?n=a47103b5' target='_blank'><img src='http://www.doubleviking.com/adserver/adview.php?what=zone:17&amp;n=a47103b5' border='0' alt=''></a></noscript>
+</script><script language="JavaScript" type="text/javascript" src="http://www.doubleviking.com/adserver/adjs.php?n=179762904&amp;what=zone:17&amp;exclude=,"></script><noscript><a href='http://www.doubleviking.com/adserver/adclick.php?n=a47103b5' target='_blank'><img src='http://www.doubleviking.com/adserver/adview.php?what=zone:17&amp;n=a47103b5' border='0' alt=''></a></noscript>
 
 </div>
 </td>
@@ -97,7 +97,7 @@ google_color_url = "000000";
       document.write ("&amp;referer=" + escape(document.referrer));
    document.write ("'><" + "/script>");
 //-->
-</script><script language="JavaScript" type="text/javascript" src="http://www.fatpenguinmedia.com/phpads/adjs.php?n=604957315&amp;what=zone:48&amp;exclude=,"></script><noscript><a href='http://www.fatpenguinmedia.com/phpads/adclick.php?n=a2f0eea8' target='_blank'><img src='http://www.fatpenguinmedia.com/phpads/adview.php?what=zone:48&amp;n=a2f0eea8' border='0' alt=''></a></noscript>
+</script><script language="JavaScript" type="text/javascript" src="http://www.fatpenguinmedia.com/phpads/adjs.php?n=552182445&amp;what=zone:48&amp;exclude=,"></script><noscript><a href='http://www.fatpenguinmedia.com/phpads/adclick.php?n=a2f0eea8' target='_blank'><img src='http://www.fatpenguinmedia.com/phpads/adview.php?what=zone:48&amp;n=a2f0eea8' border='0' alt=''></a></noscript>
 
 <script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
 </script>
@@ -122,7 +122,7 @@ urchinTracker();
 <div class="c">
 	<p><b><span style="font-size: 13.5pt">Bamkapow.com Privacy Statement</span></b><o:p></o:p>
 </p><p>This statement covers the site www.Bamkapow.com (“Bamkapow”). Please read this statement carefully before using proceeding to access Bamkapow. Your use of Bamkapow indicates your agreement to abide by the Terms in effect.<o:p></o:p></p>
-	<p><b>Information Collection</b><br>Kittycough Creative, LLC. is the sole owner of the information collected on www.Bamkapow.com. Bamkapow may collect information from our users at several different points on our Web site.<o:p></o:p></p>
+	<p><b>Information Collection</b><br>Double Viking Network, LLC. is the sole owner of the information collected on www.Bamkapow.com. Bamkapow may collect information from our users at several different points on our Web site.<o:p></o:p></p>
 	<p><b>Comments</b><br> In order to enhance their use of this Web site, users can choose to leave comments on particular articles of interest. To leave a comment, users must submit information including a valid email address. Bamkapow uses this information to screen out users who leave comments prohibited by our terms and conditions of use, and will not pass this information to any other organization.<o:p></o:p></p>
 	<p><b>Mailing List</b><br> Bamkapow may launch a mailing list in 2006. In order to sign up to receive regular emails from this mailing list, users must submit information including a valid email address and demographic information such as location and interests. This information will be used in aggregate form only in order to assess general user interest in various internal and third party products and services, and your personal and contact information will not be passed to any other organization. Users who choose to sign up for the mailing list will receive regular emails from Bamkapow including new articles added to the site as well as emails from third party Bamkapow site sponsors. If you do not wish to receive emails from third party advertisers, do not sign up for the mailing list.<o:p></o:p></p>
 	<p><b>Discussion Group and Cookies</b><br> In order to further enhance Bamkapow user experience, Bamkapow may launch a discussion board service where users can discuss common topics of interest. Users will have the option of signing up for this service, and to do so must submit information including a valid email address. Bamkapow uses this information to screen out users who leave comments prohibited by our terms and conditions of use and to pick out topics of interest to discussion board users. Bamkapow will not pass this information to any other organization except in aggregate form.<o:p></o:p></p>
@@ -157,7 +157,7 @@ urchinTracker();
       document.write ("&amp;referer=" + escape(document.referrer));
    document.write ("'><" + "/script>");
 //-->
-</script><script language="JavaScript" type="text/javascript" src="http://www.doubleviking.com/adserver/adjs.php?n=637834617&amp;what=zone:18&amp;exclude=,"></script><noscript><a href='http://www.doubleviking.com/adserver/adclick.php?n=abfba320' target='_blank'><img src='http://www.doubleviking.com/adserver/adview.php?what=zone:18&amp;n=abfba320' border='0' alt=''></a></noscript>
+</script><script language="JavaScript" type="text/javascript" src="http://www.doubleviking.com/adserver/adjs.php?n=124561695&amp;what=zone:18&amp;exclude=,"></script><noscript><a href='http://www.doubleviking.com/adserver/adclick.php?n=abfba320' target='_blank'><img src='http://www.doubleviking.com/adserver/adview.php?what=zone:18&amp;n=abfba320' border='0' alt=''></a></noscript>
 
 
 </div></center>
