--- a/m/my/my3/my3cents.com.html
+++ b/m/my/my3/my3cents.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the my3cents.com privacy policy that was archived on 2007-02-27.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070227012944id_/http%3A//www.my3cents.com/privacy.cgi) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the my3cents.com privacy policy that was archived on 2007-12-31.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071231110812id_/http%3A//www.my3cents.com/privacy.cgi) for the most accurate reproduction.-->
 
 <html><head>
 <title>My3cents.com - Let your voice be heard! Consumer Reviews, Complaints and more...</title>
@@ -20,10 +20,10 @@
 </head>
 <body leftmargin="0" topmargin="0" marginwidth="0" marginheight="0" style="margin:5;" bgcolor="#15386B">
 <center>
-<table width="750" style="margin:0;" cellpadding="12" cellspacing="0" bgcolor="#FFFFFF" border="0">
+<table width="785" style="margin:0;" cellpadding="12" cellspacing="0" bgcolor="#FFFFFF" border="0">
 <tbody><tr><td>
 
-<script>inc_top('', '');</script>
+<script>inc_top('', '', '');</script>
 
 
 
@@ -34,18 +34,11 @@
 
 <iframe id="iframe" src="/ads/tribal728.htm" width="728" height="90" marginwidth="0" marginheight="0" hspace="0" vspace="0" frameborder="0" scrolling="no">
 
-<!-- TF 468x60 JScript HORIZ NoAD code -->
-<center><script language=javascript><!--
-document.write('<scr'+'ipt language=javascript src="http://a.tribalfusion.com/j.ad?site=My3centscom&adSpace=ROS&size=468x60&type=horiz&noAd=1&requestID='+((new Date()).getTime() % 2147483648) + Math.random()+'"></scr'+'ipt>');
-//-->
+<script type="text/javascript">
+   e9 = new Object();
+   e9.size = "728x90,468x60";
 </script>
-<noscript>
-   <a href="http://a.tribalfusion.com/i.click?site=My3centscom&adSpace=ROS&size=468x60&requestID=1012829168" target=_blank>
-   <img src="http://a.tribalfusion.com/i.ad?site=My3centscom&adSpace=ROS&size=468x60&requestID=1012829168" 
-                  width=468 height=60 border=0 alt="Click Here"></a>
-</noscript>
-</center>
-<!-- TF 468x60 JScript HORIZ NoAD code -->
+<script type="text/javascript" src="http://tags.expo9.exponential.com/tags/My3centscom/ROS/tags.js"></script>
 
 </iframe>
 
@@ -148,7 +141,7 @@ My3cents.com<br>
 <tbody><tr>
 
 
-<td width="50%" valign="top"><table cellspacing="10"><tbody><tr><td valign="center"><a href="http://www.my3cents.com/creditCardDetails.cgi?id=1047"><img src="http://www.cardoffers.com/images/credit_cards/bankofamerica/worldpoints_platplus.jpg" border="0"></a></td><td align="center"><a href="http://www.my3cents.com/creditCardDetails.cgi?id=1047">Bank of America WorldPoints™ Platinum Plus™ MasterCard® Credit Card</a><br>Apr: 7.90%<br>Annual: $0</td></tr><tr><td valign="center"><a href="http://www.my3cents.com/creditCardDetails.cgi?id=1102"><img src="http://www.cardoffers.com/images/credit_cards/bankofamerica/usair_sign.jpg" border="0"></a></td><td align="center"><a href="http://www.my3cents.com/creditCardDetails.cgi?id=1102">US Airways® Visa Signature® Credit Card</a><br>Apr: 0%<br>Annual: $90</td></tr><tr><td valign="center"><a href="http://www.my3cents.com/creditCardDetails.cgi?id=1110"><img src="http://www.cardoffers.com/images/credit_cards/american_express/in_la.jpg" border="0"></a></td><td align="center"><a href="http://www.my3cents.com/creditCardDetails.cgi?id=1110">IN:LA Card from American Express®</a><br>Apr: 12.24%<br>Annual: $0</td></tr>
+<td width="50%" valign="top"><table cellspacing="10"><tbody><tr><td valign="center"><a href="http://www.my3cents.com/creditCardDetails.cgi?id=1067"><!--<img src='http://www.cardoffers.com/images/credit_cards/bankofamerica/worldpoints_world.jpg' border=0>--></a></td><td align="center"><a href="http://www.my3cents.com/creditCardDetails.cgi?id=1067">Bank of America World MasterCard® with WorldPoints™</a><br>Apr: 9.99%<br>Annual: $0</td></tr><tr><td valign="center"><a href="http://www.my3cents.com/creditCardDetails.cgi?id=1040"><!--<img src='http://www.cardoffers.com/images/credit_cards/citibank/premierpass_classic.jpg' border=0>--></a></td><td align="center"><a href="http://www.my3cents.com/creditCardDetails.cgi?id=1040">Citi® PremierPass(SM) Card</a><br>Apr: 13.24%<br>Annual: $0</td></tr><tr><td valign="center"><a href="http://www.my3cents.com/creditCardDetails.cgi?id=1752"><!--<img src='http://www.cardoffers.com/images/credit_cards/Citibank/CitiCashReturns.jpg' border=0>--></a></td><td align="center"><a href="http://www.my3cents.com/creditCardDetails.cgi?id=1752">Citi CashReturns(SM) MasterCard®</a><br>Apr: 9.99%<br>Annual: $0</td></tr>
 
 </tbody></table>
 
@@ -157,27 +150,11 @@ My3cents.com<br>
 
 <iframe id="iframe" src="/ads/tribal336.htm" width="336" height="280" marginwidth="0" marginheight="0" hspace="0" vspace="0" frameborder="0" scrolling="no">
 
-<!-- TF 336x280 JScript VAR code -->
-<center><script language=javascript><!--
-
-if (navigator.appName == "Netscape"){
-
-document.write(' 	<a href="http://a.tribalfusion.com/i.click?site=My3centscom&adSpace=ROS&size=336x280&requestID=1538446732"><IMG SRC="http://a.tribalfusion.com/i.ad?site=My3centscom&adSpace=ROS&size=336x280&requestID=1538446732" border=0></a>');
-
-}else{
-
-document.write('<scr'+'ipt language=javascript src="http://a.tribalfusion.com/j.ad?site=My3centscom&adSpace=ROS&size=336x280&type=var&requestID='+((new Date()).getTime() % 2147483648) + Math.random()+'"></scr'+'ipt>');
-
-}
-//-->
+<script type="text/javascript">
+   e9 = new Object();
+   e9.size = "336x280,300x250";
 </script>
-<noscript>
-   <a href="http://a.tribalfusion.com/i.click?site=My3centscom&adSpace=ROS&size=336x280&requestID=2055095924" target=_blank>
-   <img src="http://a.tribalfusion.com/i.ad?site=My3centscom&adSpace=ROS&size=336x280&requestID=2055095924" 
-                  width=336 height=280 border=0 alt="Click Here"></a>
-</noscript>
-</center>
-<!-- TF 336x280 JScript VAR code -->
+<script type="text/javascript" src="http://tags.expo9.exponential.com/tags/My3centscom/ROS/tags.js"></script>
 
 </iframe>
 
@@ -209,7 +186,7 @@ document.write('<scr'+'ipt language=javascript src="http://a.tribalfusion.com/j.
 
 </td></tr>
 <tr><td align="center">
-<a href="/compLogin.cgi"><font class="small">Businesses: Respond to Consumers</font></a> | 
+<a href="/companyMembershipOrder.cgi"><font class="small">Businesses: Respond to Consumers</font></a> | 
 <a href="http://directory.google.com/Top/Home/Consumer_Information/Recalls/"><font class="small">Product Recalls Directory from Google</font></a> | <a href="http://news.search.yahoo.com/search/news/?p=consumer+recall&amp;ei=UTF-8"><font class="small">Consumer News &amp; Recall Info from Yahoo</font></a>
 
 </td></tr>
@@ -222,7 +199,7 @@ document.write('<scr'+'ipt language=javascript src="http://a.tribalfusion.com/j.
 
 <hr width="95%">
 
-<font class="small">Copyright 2000-2007 My3cents, LLC &nbsp; &nbsp; Browse in another <a href="http://babel.altavista.com/tr?lin=en&amp;lout=fr&amp;translate_me=yes" class="small">language</a>
+<font class="small">Copyright 2000-2007 My3cents, LLC &nbsp; &nbsp; Browse in another <a href="http://babel.altavista.com/tr?lin=en&amp;lout=fr&amp;translate_me=yes" class="small">language</a> 
 </font></center><font class="small">
 
 
