--- a/d/da/daz/dazzleyellowpages.com.html
+++ b/d/da/daz/dazzleyellowpages.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the dazzleyellowpages.com privacy policy that was archived on 2007-06-13.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070613111309id_/http%3A//www.dazzleyellowpages.com/Privacy-Policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the dazzleyellowpages.com privacy policy that was archived on 2007-12-31.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071231120749id_/http%3A//www.dazzleyellowpages.com/Privacy-Policy) for the most accurate reproduction.-->
 
 <html><head>
 <title>DazzleYellowPages.com - Privacy Policy</title>
@@ -74,7 +74,9 @@ color:#0054A6;}
 			<a href="http://www.dazzleyellowpages.com/why-us.asp">10 Reasons To 
 			Get Listed</a> - <font color="#FF0000">A must see!&nbsp; </font>|&nbsp;
 			<a href="http://www.dazzleyellowpages.com/listing-packages.asp">
-			Listing Packages</a></b></span></p></td>
+			Listing Packages</a> |
+			<a href="http://www.dazzleyellowpages.com/a-2-z-yellow-pages.asp">
+			DYP Category</a></b></span></p></td>
         </tr>
       </tbody></table>
       </td>
@@ -941,6 +943,8 @@ color:#0054A6;}
           </td>
           <td width="20%" valign="top" background="inclu/ta1top23.jpg">
 
+
+
 <script language="javascript">
 <!--
 function VerifyForm()
@@ -1135,6 +1139,30 @@ google_color_text = "000000";
 //--></script>
 <script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
             </script></font></p></td>
+		</tr>
+
+
+	
+		<tr>
+			<td valign="top" width="100%">
+			<p align="center"><script type="text/javascript"><!--
+google_ad_client = "pub-5287338305480771";
+google_ad_width = 120;
+google_ad_height = 600;
+google_ad_format = "120x600_as";
+google_cpa_choice = "CAEaCHVd2ddq0rUHMABQA1AIULcDUJ0CUBJQQ1AvUARQBVAH";
+google_ad_channel = "";
+//-->
+</script>
+<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script></p></td>
+		</tr>
+
+
+	
+		<tr>
+			<td valign="top" width="100%">
+			&nbsp;</td>
 		</tr>
 
 
