--- a/d/do/dow/downloadfestival.co.uk.html
+++ b/d/do/dow/downloadfestival.co.uk.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the downloadfestival.co.uk privacy policy that was archived on 2007-12-22.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071222153441id_/http%3A//www.downloadfestival.co.uk/Privacy.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the downloadfestival.co.uk privacy policy that was archived on 2008-01-12.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20080112124927id_/http%3A//www.downloadfestival.co.uk/Privacy.aspx) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
@@ -30,36 +30,15 @@ function MM_swapImage() { //v3.0
    if ((x=MM_findObj(a[i]))!=null){document.MM_sr[j++]=x; if(!x.oSrc) x.oSrc=x.src; x.src=a[i+2];}
 }
 
-function MM_findObj(n, d) { //v4.01
-  var p,i,x;  if(!d) d=document; if((p=n.indexOf("?"))>0&&parent.frames.length) {
-    d=parent.frames[n.substring(p+1)].document; n=n.substring(0,p);}
-  if(!(x=d[n])&&d.all) x=d.all[n]; for (i=0;!x&&i<d.forms.length;i++) x=d.forms[i][n];
-  for(i=0;!x&&d.layers&&i<d.layers.length;i++) x=MM_findObj(n,d.layers[i].document);
-  if(!x && d.getElementById) x=d.getElementById(n); return x;
-}
-function MM_swapImage() { //v3.0
-  var i,j=0,x,a=MM_swapImage.arguments; document.MM_sr=new Array; for(i=0;i<(a.length-2);i+=3)
-   if ((x=MM_findObj(a[i]))!=null){document.MM_sr[j++]=x; if(!x.oSrc) x.oSrc=x.src; x.src=a[i+2];}
-}
-function MM_swapImgRestore() { //v3.0
-  var i,x,a=document.MM_sr; for(i=0;a&&i<a.length&&(x=a[i])&&x.oSrc;i++) x.src=x.oSrc;
-}
-
-function MM_preloadImages() { //v3.0
-  var d=document; if(d.images){ if(!d.MM_p) d.MM_p=new Array();
-    var i,j=d.MM_p.length,a=MM_preloadImages.arguments; for(i=0; i<a.length; i++)
-    if (a[i].indexOf("#")!=0){ d.MM_p[j]=new Image; d.MM_p[j++].src=a[i];}}
-}
-
 //-->
 </script>
 
-<link href="styles/dlf.css" rel="stylesheet" type="text/css">
-<script src="scripts/AC_RunActiveContent.js" type="text/javascript"></script>
+<link href="/styles/dlf.css" rel="stylesheet" type="text/css">
+<script src="/scripts/AC_RunActiveContent.js" type="text/javascript"></script>
 
 </head>
 
-<body onload="MM_preloadImages('/images/btn_over_1.jpg','/images/btn_over_2.jpg','/images/btn_over_3.jpg','/images/btn_over_4.jpg','/images/header_o.jpg','/images/btn_prev_over.jpg','/images/btn_next_over.jpg', /images/header_flag_gb_f2.jpg','/images/header_flag_us_f2.jpg)">
+<body onload="MM_preloadImages('/images/btn_over_1.jpg','/images/btn_over_2.jpg','/images/btn_over_3.jpg','/images/btn_over_4.jpg','/images/header_o.jpg','/images/btn_prev_over.jpg','/images/btn_next_over.jpg','/images/header_flag_gb_f2.jpg','/images/header_flag_us_f2.jpg')">
 <div align="center">
 
   <table width="611" border="0" cellspacing="0" cellpadding="0">
@@ -79,7 +58,7 @@ function MM_preloadImages() { //v3.0
   <tr>
    <td><a href="/"><img name="header_logo" src="/images/header_logo.jpg" width="202" height="45" border="0" id="header_logo" alt=""></a></td>
    <td><img name="header_space" src="/images/header_space.jpg" width="232" height="45" border="0" id="header_space" alt=""></td>
-   <td><a href="http://www.downloadfestival.co.uk" onmouseout="MM_swapImgRestore();" onmouseover="MM_swapImage('header_flag_gb','','/images/header_flag_gb_f2.jpg',1);"><img name="header_flag_gb" src="/images/header_flag_gb.jpg" width="63" height="45" border="0" id="header_flag_gb" alt=""></a></td>
+   <td><img name="header_flag_gb" src="/images/header_flag_gb_f2.jpg" width="63" height="45" border="0" id="header_flag_gb" alt=""></td>
    <td><a href="http://www.downloadfestival.com" onmouseout="MM_swapImgRestore();" onmouseover="MM_swapImage('header_flag_us','','/images/header_flag_us_f2.jpg',1);"><img name="header_flag_us" src="/images/header_flag_us.jpg" width="84" height="45" border="0" id="header_flag_us" alt=""></a></td>
 
    <td><img src="/images/spacer.gif" width="1" height="45" border="0" alt=""></td>
@@ -89,7 +68,7 @@ function MM_preloadImages() { //v3.0
     </tr>
     <tr>
       <td width="24" align="left" valign="top"><img src="/images/left2.jpg" width="19" height="46"></td>
-      <td align="center" valign="middle" background="/images/bar1.jpg"><div align="center"><a href="/Register.aspx"><img src="/images/btn_1.jpg" alt="REGISTER" width="111" height="27" border="0" id="Image1" onmouseover="MM_swapImage('Image1','','/images/btn_over_1.jpg',1)" onmouseout="MM_swapImgRestore()"></a><a href="http://downloadfestival.tv/"><img src="/images/btn_2.jpg" alt="DOWNLOAD TV" width="133" height="27" border="0" id="Image2" onmouseover="MM_swapImage('Image2','','/images/btn_over_2.jpg',1)" onmouseout="MM_swapImgRestore()"></a><a href="http://forums.downloadfestival.co.uk/"><img src="/images/btn_3.jpg" alt="DOWNLOAD FORUMS" width="166" height="27" border="0" id="Image3" onmouseover="MM_swapImage('Image3','','/images/btn_over_3.jpg',1)" onmouseout="MM_swapImgRestore()"></a><a href="http://2007.downloadfestival.co.uk/"><img src="/images/btn_4.jpg" alt="DOWNLOAD 2007" width="151" height="27" border="0" id="Image4" onmouseover="MM_swapImage('Image4','','/images/btn_over_4.jpg',1)" onmouseout="MM_swapImgRestore()"></a></div></td>
+      <td align="center" valign="middle" background="/images/bar1.jpg"><div align="center"><a href="/Register"></a><a href="http://downloadfestival.tv/"></a><a href="http://forums.downloadfestival.co.uk/"></a><a href="http://2007.downloadfestival.co.uk/"></a><a href="/Register"><img src="images/btns/btn_01.jpg" alt="REGISTER" width="97" height="27" border="0" id="Image1" onmouseover="MM_swapImage('Image1','','images/btns/btn_o_01.jpg',1)" onmouseout="MM_swapImgRestore()"></a><a href="http://downloadfestival.tv/"><img src="images/btns/btn_02.jpg" alt="DOWNLOAD TV" width="121" height="27" border="0" id="Image2" onmouseover="MM_swapImage('Image2','','images/btns/btn_o_02.jpg',1)" onmouseout="MM_swapImgRestore()"></a><a href="http://forums.downloadfestival.co.uk/"><img src="images/btns/btn_03.jpg" alt="FORUMS" width="90" height="27" border="0" id="Image3" onmouseover="MM_swapImage('Image3','','images/btns/btn_o_03.jpg',1)" onmouseout="MM_swapImgRestore()"></a><a href="http://www.backstreet-merch.com/bands/dwnld/"><img src="images/btns/btn_04.jpg" alt="MERCHANDISE" width="116" height="27" border="0" id="Image4" onmouseover="MM_swapImage('Image4','','images/btns/btn_o_04.jpg',1)" onmouseout="MM_swapImgRestore()"></a><a href="http://2007.downloadfestival.co.uk/"><img src="images/btns/btn_05.jpg" alt="DOWNLOAD 2007" width="137" height="27" border="0" id="Image6" onmouseover="MM_swapImage('Image6','','images/btns/btn_o_05.jpg',1)" onmouseout="MM_swapImgRestore()"></a></div></td>
       <td width="21" align="right" valign="top"><img src="/images/right2.jpg" width="21" height="46"></td>
 
     </tr>
@@ -175,12 +154,12 @@ function MM_preloadImages() { //v3.0
           </td>
           <td width="43" height="155" rowspan="2" align="left" valign="top"><img src="/images/ft_03.jpg" width="43" height="155"></td>
           <td width="227" height="155" rowspan="2" align="left" valign="bottom" bgcolor="#000000"><script type="text/javascript">
-AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=7,0,19,0','wmode', 'transparent', 'width','227','height','137','title','DOWNLOAD','src','flash/banner1','quality','high','pluginspage','http://www.macromedia.com/go/getflashplayer','movie','flash/banner1' ); //end AC code
-</script><object codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=7,0,19,0" width="227" height="137" title="DOWNLOAD" classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000"><param name="wmode" value="transparent"> <param name="movie" value="flash/banner1.swf"> <param name="quality" value="high"> <embed wmode="transparent" width="227" height="137" title="DOWNLOAD" src="flash/banner1.swf" quality="high" pluginspage="http://www.macromedia.com/go/getflashplayer" type="application/x-shockwave-flash"></object><noscript><object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=7,0,19,0" width="227" height="137" title="DOWNLOAD">
-            <param name="movie" value="flash/banner1.swf" />
+AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=7,0,19,0','wmode', 'transparent', 'width','227','height','137','title','DOWNLOAD','src','/flash/banner1','quality','high','pluginspage','http://www.macromedia.com/go/getflashplayer','movie','/flash/banner1' ); //end AC code
+</script><embed wmode="transparent" width="227" height="137" title="DOWNLOAD" src="/flash/banner1.swf" quality="high" pluginspage="http://www.macromedia.com/go/getflashplayer" type="application/x-shockwave-flash"> <noscript><object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=7,0,19,0" width="227" height="137" title="DOWNLOAD">
+            <param name="movie" value="/flash/banner1.swf" />
             <param name="quality" value="high" />
             <param name="wmode" value="transparent">
-            <embed src="flash/banner1.swf" quality="high" pluginspage="http://www.macromedia.com/go/getflashplayer" type="application/x-shockwave-flash" width="227" height="137" wmode="transparent"></embed>
+            <embed src="/flash/banner1.swf" quality="high" pluginspage="http://www.macromedia.com/go/getflashplayer" type="application/x-shockwave-flash" width="227" height="137" wmode="transparent"></embed>
           </object></noscript></td>
           <td width="42" height="155" rowspan="2" align="left" valign="top"><img src="/images/ft_05.jpg" width="42" height="155"></td>
         </tr>
@@ -211,10 +190,13 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
       <td height="32" background="/images/footer2.jpg" bgcolor="#000000"><table width="581" border="0" cellspacing="0" cellpadding="0">
 
         <tbody><tr>
-          <td width="321" align="left" valign="middle"><span class="style1">© 1999-2007 LIVE NATION MUSIC UK LTD. ALL RIGHTS RESERVED </span></td>
-          <td width="24">&nbsp;</td>
-          <td width="236" align="right" valign="middle"><span class="style1"><a href="/Privacy.aspx">PRIVACY POLICY</a> |  <a href="/Terms.aspx">TERMS &amp; CONDITIONS</a> </span> </td>
-
+          <td width="321" align="left" valign="middle"><a href="http://www.livenation.co.uk"><img src="images/ln_logo.jpg" alt="Live Nation" width="112" height="15" border="0" id="Image5" onmouseover="MM_swapImage('Image5','','images/ln_logo_o.jpg',1)" onmouseout="MM_swapImgRestore()"></a></td>
+          <td width="24" rowspan="2">&nbsp;</td>
+          <td width="236" align="right" valign="middle">&nbsp;</td>
+        </tr>
+        <tr>
+          <td align="left" valign="middle"><span class="style1">© 1999-2007 LIVE NATION MUSIC UK LTD. ALL RIGHTS RESERVED </span></td>
+          <td width="236" align="right" valign="middle"><span class="style1"><a href="/Privacy.aspx">PRIVACY POLICY</a> | <a href="/Terms.aspx">TERMS &amp; CONDITIONS</a></span></td>
         </tr>
       </tbody></table></td>
     </tr>
